test_outputs/connlist/anp_banp_test_with_named_port_unmatched_connlist_output.txt
0.0.0.0-255.255.255.255[External] => network-policy-conformance-gryffindor/harry-potter[StatefulSet] : All Connections
0.0.0.0-255.255.255.255[External] => network-policy-conformance-slytherin/draco-malfoy[StatefulSet] : All Connections
network-policy-conformance-gryffindor/harry-potter[StatefulSet] => 0.0.0.0-255.255.255.255[External] : All Connections
network-policy-conformance-slytherin/draco-malfoy[StatefulSet] => 0.0.0.0-255.255.255.255[External] : All Connections
