test_outputs/connlist/anp_banp_test_with_named_port_unmatched_explain_output.txt

##########################################
# Specific connections and their reasons #
##########################################
----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN network-policy-conformance-gryffindor/harry-potter[StatefulSet] => network-policy-conformance-slytherin/draco-malfoy[StatefulSet]:

Denied list:
	Denied TCP, UDP, SCTP due to the following policies // rules:
		EGRESS DIRECTION (Denied)
			[ANP] pass-example // Egress rule pass-all-egress-to-slytherin (Pass)
			[BANP] default // Egress rule deny-all-egress-to-slytherin (Deny)
		INGRESS DIRECTION (Allowed) due to the system default (Allow all)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN network-policy-conformance-slytherin/draco-malfoy[StatefulSet] => network-policy-conformance-gryffindor/harry-potter[StatefulSet]:

Denied list:
	Denied TCP, UDP, SCTP due to the following policies // rules:
		EGRESS DIRECTION (Allowed) due to the system default (Allow all)
		INGRESS DIRECTION (Denied)
			[ANP] pass-example // Ingress rule pass-all-ingress-from-slytherin (Pass)
			[BANP] default // Ingress rule deny-all-ingress-from-slytherin (Deny)


#########################################################
# All Connections due to the system default (Allow all) #
#########################################################
0.0.0.0-255.255.255.255 => network-policy-conformance-gryffindor/harry-potter[StatefulSet]
0.0.0.0-255.255.255.255 => network-policy-conformance-slytherin/draco-malfoy[StatefulSet]
network-policy-conformance-gryffindor/harry-potter[StatefulSet] => 0.0.0.0-255.255.255.255
network-policy-conformance-slytherin/draco-malfoy[StatefulSet] => 0.0.0.0-255.255.255.255
